--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 div {
-    border: 2px solid red;
-    /*width: 20px;
+    /*border: 2px solid red;
+    width: 20px;
     height: 20px;
-    flex: 1;*/
-    background-color: blue;
+    flex: 1;
+    background-color: blue;*/
     flex: 1 1 0;
     height: 40px;
 }
@@ -14,4 +14,8 @@ div {
     display: flex;
     flex-direction: column;
     flex: 1 1 0;
+    border: 2px solid black;
+}
+.hovered {
+    background-color: blue;
 }
